--- a/index.html
+++ b/index.html
@@ -1,1 +1,81 @@
-<h1>Hello, world!</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "Copy en Printshop 't Hartje",
+        "image": "/assets/logo-2020-lightmodus.png",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Korreweg 38",
+          "addressLocality": "Groningen",
+          "postalCode": "9715 AB",
+          "addressCountry": "NL"
+        },
+        "telephone": "+31 50 577 9365",
+        "email": "info@thartje.nl",
+        "url": "https://thartje.nl"
+      }
+    </script>
+    <meta
+      name="description"
+      content="Copy en Printshop 't Hartje - Dé specialist in print- en drukwerk in Groningen. Snelle service en hoge kwaliteit."
+    />
+    <meta
+      name="keywords"
+      content="printen, kopiëren, copyshop, printshop, drukwerk, printservice, kantoorartikelen, Groningen, kledingbedrukking, bedrukking, DTG, flyers, stickers, visitekaartjes, folders, posters, promotiemiddelen, communicatiemiddelen"
+    />
+    <meta name="author" content="Copy en Printshop 't Hartje" />
+    <meta
+      property="og:title"
+      content="Copy en Printshop 't Hartje - Print- en drukwerk in Groningen"
+    />
+    <meta
+      property="og:description"
+      content="Snelle service, hoge kwaliteit en scherpe prijzen. Bekijk onze diensten!"
+    />
+    <meta
+      property="og:image"
+      content="https://thartje.nl/assets/logo-2020-lightmodus.png"
+    />
+    <meta property="og:url" content="https://thartje.nl" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Copy en Printshop 't Hartje - Print- en drukwerk in Groningen"
+    />
+    <meta
+      name="twitter:description"
+      content="Snelle service, hoge kwaliteit en scherpe prijzen. Bekijk onze diensten!"
+    />
+    <meta
+      name="twitter:image"
+      content="https://thartje.nl/assets/logo-2020-lightmodus.png"
+    />
+    <meta charset="UTF-8" />
+    <link rel="canonical" href="https://thartje.nl" />
+    <link rel="icon" href="/assets/favicon.ico" />
+    <link rel="icon" type="image/png" href="/assets/favicon.png" />
+    <link rel="apple-touch-icon" href="/assets/favicon-apple.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Copy & Printshop 't Hartje</title>
+  </head>
+  <script>
+    if (localStorage.getItem('theme') === 'dark') {
+      document.documentElement.classList.add('dark');
+    }
+  </script>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
+</html>
