--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
           "addressCountry": "NL"
         },
         "telephone": "+31 50 577 9365",
-        "email": "info@thartje.nl",
-        "url": "https://thartje.nl"
+        "email": "info@helloprint.az",
+        "url": "https://helloprint.az/"
       }
     </script>
     <meta
@@ -56,7 +56,7 @@
       content="https://thartje.nl/assets/logo-2020-lightmodus.png"
     />
     <meta charset="UTF-8" />
-    <link rel="canonical" href="https://thartje.nl" />
+    <link rel="canonical" href="https://helloprint.az/">
     <link rel="icon" href="/assets/favicon.ico" />
     <link rel="icon" type="image/png" href="/assets/favicon.png" />
     <link rel="apple-touch-icon" href="/assets/favicon-apple.png" />
