--- a/index.html
+++ b/index.html
@@ -1,79 +1,82 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="az">
   <head>
+    <!-- Structured data -->
     <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@type": "LocalBusiness",
-        "name": "Copy en Printshop 't Hartje",
-        "image": "/assets/logo-2020-lightmodus.png",
-        "address": {
-          "@type": "PostalAddress",
-          "streetAddress": "Korreweg 38",
-          "addressLocality": "Groningen",
-          "postalCode": "9715 AB",
-          "addressCountry": "NL"
-        },
-        "telephone": "+31 50 577 9365",
-        "email": "info@helloprint.az",
-        "url": "https://helloprint.az/"
-      }
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "Helloprint.az",
+      "image": "https://helloprint.az/assets/logo-2020-lightmodus.png",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Binəqədi rayonu",
+        "addressLocality": "Bakı",
+        "addressCountry": "AZ"
+      },
+      "telephone": "+994 51 394 43 97",
+      "email": "info@helloprint.az",
+      "url": "https://helloprint.az/"
+    }
     </script>
+
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Primary Meta -->
+    <title>Helloprint.az — Çap və dizayn xidmətləri</title>
     <meta
       name="description"
-      content="Copy en Printshop 't Hartje - Dé specialist in print- en drukwerk in Groningen. Snelle service en hoge kwaliteit."
+      content="Helloprint.az — vizit kart, flayer, stiker, afişa, qovluq və geyim üzərinə çap. Sürətli icra, yüksək keyfiyyət, sərfəli qiymətlər."
     />
     <meta
       name="keywords"
-      content="printen, kopiëren, copyshop, printshop, drukwerk, printservice, kantoorartikelen, Groningen, kledingbedrukking, bedrukking, DTG, flyers, stickers, visitekaartjes, folders, posters, promotiemiddelen, communicatiemiddelen"
+      content="çap, print, kopyalama, vizit kart, flayer, stiker, afişa, qovluq, geyim üzərinə çap, dizayn, ofis ləvazimatları, Bakı, Azərbaycan"
     />
-    <meta name="author" content="Copy en Printshop 't Hartje" />
-    <meta
-      property="og:title"
-      content="Copy en Printshop 't Hartje - Print- en drukwerk in Groningen"
-    />
+    <meta name="author" content="Helloprint.az" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://helloprint.az/" />
+    <meta property="og:title" content="Helloprint.az — Çap və dizayn xidmətləri" />
     <meta
       property="og:description"
-      content="Snelle service, hoge kwaliteit en scherpe prijzen. Bekijk onze diensten!"
+      content="Vizit kartlardan afişalara qədər bütün çap işləri bir məkanda. Keyfiyyətli, sürətli və sərfəli — Helloprint.az."
     />
-    <meta
-      property="og:image"
-      content="https://thartje.nl/assets/logo-2020-lightmodus.png"
-    />
-    <meta property="og:url" content="https://thartje.nl" />
-    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://helloprint.az/assets/logo-2020-lightmodus.png" />
+
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:title"
-      content="Copy en Printshop 't Hartje - Print- en drukwerk in Groningen"
-    />
+    <meta name="twitter:title" content="Helloprint.az — Çap və dizayn xidmətləri" />
     <meta
       name="twitter:description"
-      content="Snelle service, hoge kwaliteit en scherpe prijzen. Bekijk onze diensten!"
+      content="Vizit kart, flayer, stiker, afişa, geyim üzərinə çap — sürətli icra və yüksək keyfiyyət."
     />
-    <meta
-      name="twitter:image"
-      content="https://thartje.nl/assets/logo-2020-lightmodus.png"
-    />
-    <meta charset="UTF-8" />
-    <link rel="canonical" href="https://helloprint.az/">
+    <meta name="twitter:image" content="https://helloprint.az/assets/logo-2020-lightmodus.png" />
+
+    <!-- Canonical -->
+    <link rel="canonical" href="https://helloprint.az/" />
+
+    <!-- Icons -->
     <link rel="icon" href="/assets/favicon.ico" />
     <link rel="icon" type="image/png" href="/assets/favicon.png" />
     <link rel="apple-touch-icon" href="/assets/favicon-apple.png" />
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap"
       rel="stylesheet"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Copy & Printshop 't Hartje</title>
   </head>
+
   <script>
     if (localStorage.getItem('theme') === 'dark') {
       document.documentElement.classList.add('dark');
     }
   </script>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
