--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
   <head>
     <!-- Structured data -->
     <script type="application/ld+json">
-    {
+       {
       "@context": "https://schema.org",
       "@type": "LocalBusiness",
+      "@id": "https://helloprint.az/#business",
       "name": "Helloprint.az",
-      "image": "https://helloprint.az/assets/logo-2020-lightmodus.png",
+      "image": "https://helloprint.az/assets/helloprint_logo_light.svg",
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "Binəqədi rayonu",
         "addressLocality": "Bakı",
-        "addressCountry": "AZ"
+        "addressCountry": "AZ1116"
       },
       "telephone": "+994 51 394 43 97",
-      "email": "info@helloprint.az",
+      "email": "office.helloprint@gmail.com",
       "url": "https://helloprint.az/"
     }
     </script>
@@ -43,7 +44,7 @@
       property="og:description"
       content="Vizit kartlardan afişalara qədər bütün çap işləri bir məkanda. Keyfiyyətli, sürətli və sərfəli — Helloprint.az."
     />
-    <meta property="og:image" content="https://helloprint.az/assets/logo-2020-lightmodus.png" />
+    <meta property="og:image" content="https://helloprint.az/assets/helloprint_logo_light.svg" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -52,7 +53,7 @@
       name="twitter:description"
       content="Vizit kart, flayer, stiker, afişa, geyim üzərinə çap — sürətli icra və yüksək keyfiyyət."
     />
-    <meta name="twitter:image" content="https://helloprint.az/assets/logo-2020-lightmodus.png" />
+    <meta name="twitter:image" content="https://helloprint.az/assets/helloprint_logo_light.svg" />
 
     <!-- Canonical -->
     <link rel="canonical" href="https://helloprint.az/" />
