--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       "@type": "LocalBusiness",
       "@id": "https://helloprint.az/#business",
       "name": "Helloprint.az",
-      "image": "https://helloprint.az/assets/helloprint_logo_light.svg",
+      "image": "https://helloprint.az/assets/helloprint_logo_light.png",
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "Binəqədi rayonu",
@@ -44,7 +44,7 @@
       property="og:description"
       content="Vizit kartlardan afişalara qədər bütün çap işləri bir məkanda. Keyfiyyətli, sürətli və sərfəli — Helloprint.az."
     />
-    <meta property="og:image" content="https://helloprint.az/assets/helloprint_logo_light.svg" />
+    <meta property="og:image" content="https://helloprint.az/assets/helloprint_logo_light.png" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -53,7 +53,7 @@
       name="twitter:description"
       content="Vizit kart, flayer, stiker, afişa, geyim üzərinə çap — sürətli icra və yüksək keyfiyyət."
     />
-    <meta name="twitter:image" content="https://helloprint.az/assets/helloprint_logo_light.svg" />
+    <meta name="twitter:image" content="https://helloprint.az/assets/helloprint_logo_light.png" />
 
     <!-- Canonical -->
     <link rel="canonical" href="https://helloprint.az/" />
