--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
     <link rel="canonical" href="https://helloprint.az/" />
 
     <!-- Icons -->
-    <link rel="icon" href="/assets/favicon.ico" />
-    <link rel="icon" type="image/png" href="/assets/favicon.png" />
-    <link rel="apple-touch-icon" href="/assets/favicon-apple.png" />
+    <link rel="icon" href="/src/assets/favicon.ico" />
+    <link rel="icon" type="image/png" href="/src/assets/favicon.png" />
+    <link rel="apple-touch-icon" href="/src/assets/favicon-apple.png" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
