--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
       },
       "telephone": "+994 51 394 43 97",
       "email": "office.helloprint@gmail.com",
-      "url": "https://helloprint.az/"
+      "url": "https://helloprint.az/",
+      "sameAs": [
+    "https://www.facebook.com/Helloprint.az",
+    "https://www.instagram.com/helloprint_az",
+    "https://www.linkedin.com/company/helloprintaz"
+  ]
     }
     </script>
 
@@ -25,14 +30,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Primary Meta -->
-    <title>Helloprint.az — Çap və dizayn xidmətləri</title>
+    <title><title>Helloprint.az - Vizitkart, Flayer, Karton Vizitkart Çapı, Stiker, Buklet, Qovluq</title>
+</title>
     <meta
       name="description"
-      content="Helloprint.az — vizit kart, flayer, stiker, afişa, qovluq və geyim üzərinə çap. Sürətli icra, yüksək keyfiyyət, sərfəli qiymətlər."
+      content="Helloprint.az — Bakı çap mərkəzi, vizitkart çapı, flayer, stiker, qovluq, afişa, banner, buklet, vinil, geyim üzərinə çap, dizayn xidmətləri"
     />
     <meta
       name="keywords"
-      content="çap, print, kopyalama, vizit kart, flayer, stiker, afişa, qovluq, geyim üzərinə çap, dizayn, ofis ləvazimatları, Bakı, Azərbaycan"
+      content="Helloprint.az — Bakı çap mərkəzi. Vizitkart, flayer, stiker, qovluq, buklet, banner, vinil, geyim üzərinə çap və dizayn xidmətləri. Sürətli icra, yüksək keyfiyyət, sərfəli qiymətlər."
     />
     <meta name="author" content="Helloprint.az" />
 
@@ -42,7 +48,7 @@
     <meta property="og:title" content="Helloprint.az — Çap və dizayn xidmətləri" />
     <meta
       property="og:description"
-      content="Vizit kartlardan afişalara qədər bütün çap işləri bir məkanda. Keyfiyyətli, sürətli və sərfəli — Helloprint.az."
+      content="Vizitkartlardan ba qədər bütün çap işləri bir məkanda. Keyfiyyətli, sürətli və sərfəli — Helloprint.az."
     />
     <meta property="og:image" content="https://helloprint.az/assets/helloprint_logo_light.png" />
 
