--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Primary Meta -->
-    <title><title>Helloprint.az - Vizitkart, Flayer, Karton Vizitkart Çapı, Stiker, Buklet, Qovluq</title>
-</title>
+    <title>Helloprint.az - Vizitkart, Flayer, Karton Vizitkart Çapı, Stiker, Buklet, Qovluq</title>
     <meta
       name="description"
       content="Helloprint.az — Bakı çap mərkəzi, vizitkart çapı, flayer, stiker, qovluq, afişa, banner, buklet, vinil, geyim üzərinə çap, dizayn xidmətləri"
@@ -65,7 +64,7 @@
     <link rel="canonical" href="https://helloprint.az/" />
 
     <!-- Icons -->
-    <link rel="icon" href="/src/assets/favicon.ico" />
+    <link rel="icon" href="/src/assets/favicon.png" />
     <link rel="icon" type="image/png" href="/src/assets/favicon.png" />
     <link rel="apple-touch-icon" href="/src/assets/favicon-apple.png" />
 
