--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "Binəqədi rayonu",
-        "addressLocality": "Bakı",
+        "addressLocality": "Azərbaycan",
         "addressCountry": "AZ1116"
       },
       "telephone": "+994 51 394 43 97",
